--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ textDetect/.ipynb_checkpoints
 # ignore datasets
 textDetect/datasets/cifar_data
 textDetect/datasets/CROHME_full_v2
+textDetect/datasets/our_images_final
 # vscode
 .vscode
 
