most recent (not working)

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,8 @@ textDetectModel/__pycache__
 textDetectModel/.ipynb_checkpoints
 # ignore datasets
 # ignore our_images_final
-# textDetectModel/datasets/cifar_data
-# textDetectModel/datasets/CROHME_full_v2
-# textDetectModel/datasets/our_images_final
+textDetectModel/datasets/*
+textDetectModel/datasets/our_images_final
 textDetectModel/datasets
 
 # vscode
