--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,7 @@
 # note book stuff
 textDetectModel/__pycache__
 textDetectModel/.ipynb_checkpoints
-# ignore datasets
-# textDetectModel/datasets/cifar_data
-# textDetectModel/datasets/CROHME_full_v2
-# textDetectModel/datasets/our_images_final
-textDetectModel/datasets
+our_images_final
 
 # vscode
 .vscode
