--- a/pictex/.gitignore
+++ b/pictex/.gitignore
@@ -1,20 +1,26 @@
-#amplify
-amplify/\#current-cloud-backend
-amplify/.config/local-*
-amplify/mock-data
-amplify/backend/amplify-meta.json
-amplify/backend/awscloudformation
-amplify/team-provider-info.js
+amplify/
+graphql/
+
+# amplify/\#current-cloud-backend
+# amplify/.config/local-*
+# amplify/mock-data
+# amplify/backend/amplify-meta.json
+# amplify/backend/awscloudformation
+# amplify/team-provider-info.js
+# parameters.json
+
 build/
 dist/
 node_modules/
+
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
-parameters.json
+
 Pods
+pictex.xcworkspace/
 pictexTests/*
 pictexUITests/*
